// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputFieldBase /> <InputFieldBase /> with error should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default"
    htmlFor="test-number-field-id"
  >
    test number field label
  </label>
  <input
    className="default size-md error"
    id="test-number-field-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
  <span
    className="default body-sm weight-regular error-600 line-height-body-sm"
  >
    test caption
  </span>
</div>
`;

exports[`<InputFieldBase /> <InputFieldBase /> with initial value and caption should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default"
    htmlFor="test-number-field-id"
  >
    test number field label
  </label>
  <input
    className="default size-md filled"
    id="test-number-field-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value="initial value"
  />
  <span
    className="default body-sm weight-regular carbon-900 line-height-body-sm"
  >
    test caption
  </span>
</div>
`;

exports[`<InputFieldBase /> <InputFieldBase /> without initial value or caption should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default"
    htmlFor="test-number-field-id"
  >
    test number field label
  </label>
  <input
    className="default size-md"
    id="test-number-field-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
</div>
`;
